--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+@{
+    Layout = "~UniversityManagementSystemWebApp/Views/Shared/_Layout.cshtml";
+    //Layout = null;
+}
